Bug 266670 - [WebGPU] CTS validation/render_pipeline/fragment_state.html is failing
Summary: [WebGPU] CTS validation/render_pipeline/fragment_state.html is failing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-12-19 16:09 PST by Mike Wyrzykowski
Modified: 2024-01-02 12:23 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Wyrzykowski 2023-12-19 16:09:30 PST
[WebGPU] CTS validation/render_pipeline/fragment_state.html is failing
Comment 1 Radar WebKit Bug Importer 2023-12-19 16:09:44 PST
<rdar://problem/119899867>
Comment 2 Mike Wyrzykowski 2023-12-20 15:56:49 PST
Pull request: https://github.com/WebKit/WebKit/pull/22135
Comment 3 EWS 2024-01-02 12:23:28 PST
Committed 272576@main (b5b8dddbc498): <https://commits.webkit.org/272576@main>

Reviewed commits have been landed. Closing PR #22135 and removing active labels.