[WebGPU] CTS validation/render_pipeline/fragment_state.html is failing https://bugs.webkit.org/show_bug.cgi?id=266670 <radar://119899867>

Reviewed by Tadeu Zagallo.

Add validation such that all subcases under the CTS render_pipeline/fragment_state.html now pass.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/fragment_state-expected.txt:
Add passing expectations.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/fragment_state.spec.js:
Update to latest version of the test.

* Source/WebCore/Modules/WebGPU/GPUColorWrite.h:
(WebCore::compare):
(WebCore::convertColorWriteFlagsToBacking):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUConvertToBackingContext.cpp:
(WebCore::WebGPU::compare):
(WebCore::WebGPU::ConvertToBackingContext::convertColorWriteFlagsToBacking):
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPU.serialization.in:
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUColorTargetState.h:
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUColorWrite.h:
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseAttribute):
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::usesSampleMask const):
(WGSL::ShaderModule::setUsesSampleMask):
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::hasAlphaChannel):
(WebGPU::textureFormatAllowedForRetunType):
(WebGPU::Device::createRenderPipeline):
* Source/WebGPU/WebGPU/ShaderModule.h:
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::metalDataTypeForStructMember):
(WebGPU::parseReturnType):
(WebGPU::ShaderModule::ShaderModule):
(WebGPU::ShaderModule::returnTypeForEntryPoint const):
* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::renderTargetPixelByteCost):
(WebGPU::Texture::renderTargetPixelByteAlignment):
* Source/WebKit/Shared/WebGPU/WebGPUColorTargetState.h:
Add validation.

Canonical link: https://commits.webkit.org/272576@main